--- a/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
+++ b/frontend/core/src/main/webapp/static/app/main/tasksSlides.html
@@ -6,8 +6,8 @@
     <div class="swiper-slide" swiper-slide="tasks/inbox" ng-include="'static/app/main/inbox.html'"></div>
     <div class="swiper-slide priority-slide" swiper-slide="tasks/home" ng-include="'static/app/main/home.html'"></div>
     <div class="swiper-slide" swiper-slide="tasks/dates" ng-include="'static/app/tasks/dates.html'"></div>
+    <div class="swiper-slide" swiper-slide="tasks/menu" ng-include="'static/app/tasks/menu.html'"></div>
     <div class="swiper-slide" swiper-slide="tasks/lists" ng-include="'static/app/tasks/lists.html'"></div>
-    <div class="swiper-slide" swiper-slide="tasks/projects" ng-include="'static/app/tasks/projects.html'"></div>
     <!-- areas -->
     <!-- contexts -->
     <div class="swiper-slide" swiper-slide="tasks/single" ng-include="'static/app/tasks/singleTasks.html'"></div>
