--- a/frontend/core/src/main/webapp/static/app/tasks/editTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTask.html
@@ -1,10 +1,58 @@
-<div class="no-slides-container">
+<div class="no-slides-container" ng-controller="TasksController">
   <section id="edit-task" class="one-column-grid page">
     <div class="column">
       <header class="heading-header">
-        <h3>edit task</h3>
+        <h3 ng-if="task.uuid">edit task</h3>
+        <h3 ng-if="!task.uuid">new task</h3>
       </header>
-      <div class="content-container simple-content-container" edit-task></div>
+      <div class="content-container simple-content-container">   
+        <form class="form-horizontal" role="form" name="taskEdit">
+
+          <div class="form-group">
+            <label class="sr-only" for="taskTitle">title</label>
+            <input type="text" class="simple-input" id="taskTitle" ng-model="task.title" placeholder="title..." required>
+          </div>
+
+          <div ng-switch="showDate">
+
+            <div ng-switch-default>
+              <span class="simple-input inactive-text" ng-click="focusDate()">select date...</span>
+            </div>
+
+            <div ng-switch-when="date">
+              <div class="form-group">
+                <label for="taskDue" class="sr-only">select date...</label>
+                <input type="date" id="taskDue" class="simple-input" ng-model="task.due" date>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="sr-only" for="taskParent">list</label>
+            <select class="simple-input" id="taskParent" ng-model="task.relationships.parent" ng-options="list.uuid as list.title for list in lists">
+              <option value="">select list...</option>
+            </select>
+          </div>
+
+          <div ng-if="contexts.length" class="form-group">
+            <label class="sr-only" for="taskContext">context</label>
+            <select class="simple-input" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts">
+              <option value="">select context...</option>
+            </select>
+          </div>
+
+          <div class="form-group">
+            <label class="sr-only" for="taskLink">url</label>
+            <input type="text" class="simple-input" id="taskLink" ng-model="task.link" placeholder="url...">
+          </div>
+
+          <div class="form-group vertical-buttons">
+            <button type="submit" class="wide-button normal-button" ng-disabled="!taskEdit.$valid" ng-click="saveTask(task)">save</button>
+            <button type="button" class="wide-button cancel-button" ng-click="cancelEdit()">cancel</button>
+          </div>
+
+        </form>
+      </div>
     </div>
   </section>
 </div>
