--- a/frontend/core/src/main/webapp/static/app/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/lists.html
@@ -2,34 +2,15 @@
   <div class="column">
     <header id="tasks-lists-header" class="page-header" ng-init="heading='lists'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="tasks-lists-page-content-container" class="content-container page-content-container">
-      <div class="inner-page-content-container">
-        <section ng-show="filteredProjects && filteredProjects.length">
-          <h3><a href ng-click="gotoProjects()">projects</a></h3>
-          <ul class="indent list-arrow-right">
-            <li ng-class="selected" ng-repeat="project in filteredProjects = (tasks | tasksFilter:filterService.activeFilters.project)">
-              <a class="text-muted click-to-slide" href ng-click="goToProject(project.uuid)">
-                <span class="link-title">{{project.title}}</span>
-                <span class="icon-arrow-right"></span>
-              </a>
-            </li>
-          </ul>
-        </section>
-
-        <section ng-if="contexts && contexts.length">
-          <h3><a href ng-click="gotoContexts()">contexts</a></h3>
-          <ul class="indent list-arrow-right">
-            <li ng-repeat="context in contexts">
-              <a class="click-to-slide" href="#/{{prefix}}/tasks/context/{{context.uuid}}">
-                <span class="link-title">@{{context.title}}</span><span class="icon-arrow-right"></span>
-              </a>
-            </li>
-          </ul>      
-        </section>
+      <div class="swiper-container vertical-slides" swiper-container="tasks/lists" swiper-type="page">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide" ng-repeat="list in lists" list-slide swiper-slide="tasks/lists/{{list.uuid}}" expected-slides="lists.length">
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <aside class="column">
     TODO
   </aside>
-
 </section>
