Fixed dates not showing, removed unnecessary EditTaskController

--- a/frontend/core/src/main/webapp/static/app/main/editItem.html
+++ b/frontend/core/src/main/webapp/static/app/main/editItem.html
@@ -1,5 +1,5 @@
-<div class="no-slides-container" ng-controller="ItemsController">
-  <section id="edit-item" class="one-column-grid page">
+<div class="no-slides-container" ng-controller="MainController">
+  <section id="edit-item" class="one-column-grid page" ng-controller="ItemsController">
     <div class="column">
       <header class="heading-header">
         <h3 ng-if="item.uuid">edit item</h3>
