--- a/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
+++ b/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
@@ -1,4 +1,4 @@
-<div class="accordion-item">
+<div class="accordion-title">
   <div ng-switch="isOpen">
     <div ng-switch-when="false" id="closedAccordionTitleWrapper">
       <div ng-if="hasComplete" class="table-wrapper">
@@ -11,7 +11,7 @@
         <a id="accordionTitleLink" class="accordion-toggle center-input-wrapper" href ng-click="clickTitle()">{{item.title}}</a>
       </div>
     </div>
-    <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper accordion-item-open" ng-class="!hasComplete && 'no-checkbox'">
+    <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper accordion-title-open" ng-class="!hasComplete && 'no-checkbox'">
       <div ng-if="hasComplete" class="left-checkbox-wrapper">
         <input type="checkbox" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
         <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
