--- a/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
+++ b/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
@@ -1,32 +1,27 @@
-<div class="accordion-title">
-  <div ng-switch="isOpen">
-    <div ng-switch-when="false" id="closedAccordionTitleWrapper">
-      <div ng-if="hasComplete" class="table-wrapper">
-        <input type="checkbox" class="left-checkbox-wrapper" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
-        <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
-        <a id="accordionTitleLink" ng-class="getTitleInputClass()" class="accordion-toggle" href ng-click="clickTitle()">{{item.title}}</a>
-      </div>
-      <div ng-if="!hasComplete" id="soloAccordionTitleLinkWrapper" class="table-wrapper">
-        <div id="accordionTitleHeightFix"></div>
-        <a id="accordionTitleLink" class="accordion-toggle center-input-wrapper" href ng-click="clickTitle()">{{item.title}}</a>
-      </div>
+<div class="accordion-title" ng-switch="isOpen">
+  <div ng-switch-when="false" id="closedAccordionTitleWrapper">
+    <div ng-if="hasComplete" class="table-wrapper">
+      <input type="checkbox" class="left-checkbox-wrapper" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
+      <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
+      <a id="accordionTitleLink" ng-class="getTitleInputClass()" class="accordion-toggle" href ng-click="clickTitle()">{{item.title}}</a>
     </div>
-    <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper accordion-title-open" ng-class="!hasComplete && 'no-checkbox'">
-      <div ng-if="hasComplete" class="left-checkbox-wrapper">
-        <input type="checkbox" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
-        <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
-      </div>
-      <div ng-class="getTitleInputClass()">
-        <label class="sr-only" for="accordionTitleInput">title</label>
-        <input id="accordionTitleInput" type="text" ng-focus="startTitleEdit($event)" ng-keypress="evaluateKeyPress($event)" class="simple-input swiper-no-swiping" ng-model="item.title" placeholder="title..." required>
-      </div>
-      <div class="right-button-wrapper">
-        <button class="button" type="button" ng-click="pressItemEdit()"><span class="icon-i"></span>
-        </button>
-      </div>
-    </form>
+    <div ng-if="!hasComplete" id="soloAccordionTitleLinkWrapper" class="table-wrapper">
+      <div id="accordionTitleHeightFix"></div>
+      <a id="accordionTitleLink" class="accordion-toggle center-input-wrapper" href ng-click="clickTitle()">{{item.title}}</a>
+    </div>
   </div>
-  <div class="accordion-body" ng-show="isOpen">
-    <div class="accordion-inner" ng-transclude></div>
-  </div>
+  <form ng-switch-when="true" role="form" name="itemTitleEdit" class="table-wrapper accordion-title-open" ng-class="!hasComplete && 'no-checkbox'">
+    <div ng-if="hasComplete" class="left-checkbox-wrapper">
+      <input type="checkbox" id="{{item.uuid}}" name="checkbox" class="input-checkbox" ng-checked="item.completed" ng-click="itemChecked()" />
+      <label class="checkbox swiper-no-swiping" for="{{item.uuid}}"></label>
+    </div>
+    <div ng-class="getTitleInputClass()">
+      <label class="sr-only" for="accordionTitleInput">title</label>
+      <input id="accordionTitleInput" type="text" ng-focus="startTitleEdit($event)" ng-keypress="evaluateKeyPress($event)" class="simple-input swiper-no-swiping" ng-model="item.title" placeholder="title..." required>
+    </div>
+    <div class="right-button-wrapper">
+      <button class="button" type="button" ng-click="pressItemEdit()"><span class="icon-i"></span>
+      </button>
+    </div>
+  </form>
 </div>
