--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -60,6 +60,8 @@
             <h3><a href ng-click="gotoInbox()">inbox</a></h3>
             <div class="inner-page-content-container" accordion>
               <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})" accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false">
+              </div>
+              <div class="accordion-body" ng-if="isOpen(task)">
                 <div ng-include="'static/app/main/itemActions.html'"></div>
               </div>
             </div>
@@ -67,8 +69,11 @@
           <div class="filtered-items" ng-show="filteredTasks.length" ng-controller="TasksController">
             <h3><a href ng-click="gotoTasks()">tasks</a></h3>
             <div class="inner-page-content-container" accordion>
-              <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})" accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)">
-                <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+              <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})">
+                <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+                <div class="accordion-body" ng-if="isOpen(task)">
+                  <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+                </div>
               </div>
             </div>
           </div>
