--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -3,8 +3,11 @@
     <header class="page-header" ng-init="heading='inbox'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="inbox-page-content-container" class="content-container page-content-container">
       <div class="inner-page-content-container" accordion>
-        <div ng-repeat="item in items" accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete>
-          <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
+        <div ng-repeat="item in items">
+          <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" has-complete="false" toggle-complete></div>
+          <div class="accordion-body" ng-if="isOpen(item)">
+            <div class="accordion-inner" ng-include="'static/app/main/itemActions.html'"></div>
+          </div>
         </div>
       </div>
     </div>
