--- a/frontend/core/src/main/webapp/static/app/tasks/tasksList.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksList.html
@@ -1,7 +1,9 @@
-
 <div class="inner-page-content-container" accordion>
-  <div ng-repeat="task in tasks | tasksFilter:tasksFilter" accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)">
-    <div ng-include="'static/app/tasks/taskActions.html'"></div>
+  <div ng-repeat="task in tasks | tasksFilter:tasksFilter">
+    <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+    <div class="accordion-body" ng-if="isOpen(task)">
+      <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+    </div>
   </div>
   <div sub-task add="addSubtask(subtask)" subtask="subtask"></div>
 </div>
