--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -59,10 +59,11 @@
           <div class="filtered-items" ng-show="filteredItems.length" ng-controller="ItemsController">
             <h3><a href ng-click="gotoInbox()">inbox</a></h3>
             <div class="inner-page-content-container" accordion>
-              <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})" accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false">
-              </div>
-              <div class="accordion-body" ng-if="isOpen(task)">
-                <div ng-include="'static/app/main/itemActions.html'"></div>
+              <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title})">
+                <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false"></div>
+                <div class="accordion-body" ng-if="isOpen(item)">
+                  <div ng-include="'static/app/main/itemActions.html'"></div>
+                </div>
               </div>
             </div>
           </div>
