iOS web app meta tags.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="fragment" content="!" />
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <title ng-bind="page.getTitle()"></title>
   <link rel="stylesheet" href="static/css/em.css"/>
   <link rel="shortcut icon" href="static/favicon.ico"/>
