Revert "Merge remote-tracking branch 'team/master' into lists"
This reverts commit e2686eb50cea7b930d4a5848ec7b8d52edd4eccb, reversing
changes made to db448cb0c141260032b8b838b26e2a207989f725.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -4,9 +4,9 @@
   <base href="/" />
   <meta charset="utf-8" />
   <meta name="fragment" content="!" />
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <title ng-bind="page.getTitle()"></title>
   <link rel="stylesheet" href="static/css/em.css"/>
   <link rel="shortcut icon" href="static/favicon.ico"/>
@@ -16,5 +16,10 @@
   <div main-view></div>
 
   <script src="static/em.min.js"></script>
+  <script>
+    window.addEventListener('load', function() {
+      FastClick.attach(document.body);
+    }, false);
+  </script>
 </body>
 </html>
