--- a/frontend/core/src/main/webapp/static/app/tasks/tasksList.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksList.html
@@ -1,4 +1,4 @@
-<div accordion>
+<div class="inner-page-content-container" accordion>
   <div ng-repeat="task in tasks | tasksFilter:tasksFilter">
     <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
     <div class="accordion-body" ng-if="isOpen(task)">
