--- a/frontend/core/src/main/webapp/static/app/tasks/datebar.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/datebar.html
@@ -1,7 +1,7 @@
 <table>
   <tbody>
     <tr>
-      <td ng-repeat="date in dates"><a class="text-muted" href ng-click="dateClicked(date.yyyymmdd)">{{date.displayDateShort}}</a></td>
+      <td ng-repeat="date in dates"><a id="datebar" class="text-muted" href ng-click="dateClicked(date.yyyymmdd)">{{date.displayDateShort}}</a></td>
     </tr>
   </tbody>
 </table>
