--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -51,11 +51,9 @@
             </div>
           </form>                
         </div>
-        <div ng-if="items.length === 0 && tasks.length === 0">
-          <div class="arrow-box">
-            type here what you<br>want to remember<br><br>
-            we'll take care of the rest
-          </div>
+        <div click-elsewhere class="arrow-box" ng-show="!clickedElsewhere && items.length === 0 && tasks.length === 0">
+          type here what you<br>want to remember<br><br>
+          we'll take care of the rest
         </div>
         <div ng-if="omnibarText.title" id="filtered-items-container">          
           <div class="filtered-items" ng-show="filteredItems.length" ng-controller="ItemsController">
