Revert "Merge remote-tracking branch 'extendedmind/lists' into lists"
This reverts commit b751a135696826638c0233cb81687c7f0b924b37, reversing
changes made to 4770c9c035c088e50491b7f10c7ef877e9e0fc0b.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -3,9 +3,9 @@
 <head>
     <base href="/" />
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title ng-bind="pageTitle.getTitle()"></title>
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
@@ -84,12 +84,6 @@
 
     <script src="static/lib/idangerous/idangerous.swiper-2.4.js"></script>
     <script src="static/lib/fastclick.js"></script>
-    
-    <script>
-        window.addEventListener('load', function() {
-            FastClick.attach(document.body);
-        }, false);
-    </script>
 
     <script src="test/AppTest.js"></script>
     <script src="test/mock/MockBackendService.js"></script>
@@ -107,6 +101,5 @@
         MockController.$inject = ['MockBackendService'];
         angular.module('em.appTest').factory('MockController', MockController);
     </script>
-
 </body>
 </html>
