Added no swiping class to page header and navigation menu.

--- a/frontend/core/src/main/webapp/static/app/base/pageHeader.html
+++ b/frontend/core/src/main/webapp/static/app/base/pageHeader.html
@@ -1,4 +1,4 @@
-<nav id="page-header" role="navigation">
+<nav class="swiper-no-swiping" id="page-header" role="navigation">
   <div class="left-of-three" id="collective">&nbsp;</div>
   <div class="center-of-three" id="page-heading"><h3>{{heading}}</h3></div>
   <div class="right-of-three" id="add-new-button">
