--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -1,7 +1,7 @@
 <section id="home" class="one-column-grid page" ng-controller="HomeController">
   <div class="column">
     <header ng-hide="omniBarActive" id="main-header">
-      <nav role="navigation">
+      <nav class="swiper-no-swiping" role="navigation">
         <div id="menu-icon">
           <button id="menu-button" type="button" ng-click="toggleMenu()" alt="menu">
             <span class="icon-menu"></span>
