removed misguiding @inactive-text

--- a/frontend/core/src/main/webapp/static/app/tasks/editTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTask.html
@@ -16,7 +16,7 @@
           <div ng-switch="showDate">
 
             <div ng-switch-default>
-              <span class="simple-input inactive-text" ng-click="focusDate()">select date...</span>
+              <span class="simple-input inactive-element" ng-click="focusDate()">select date...</span>
             </div>
 
             <div ng-switch-when="true">
