--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -3,6 +3,7 @@
     <header id="tasks-dates-header" class="page-header" ng-init="heading='dates'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="tasks-dates-page-content-container" class="content-container page-content-container">
       <div class="swiper-no-swiping" id="date-picker" ng-include="'static/app/tasks/datebar.html'"></div>
+      <!-- move datebar.html here! -->
       <div class="swiper-container vertical-slides" swiper-container="tasks/dates" swiper-type="page">
         <div class="swiper-wrapper">
           <div class="swiper-slide" ng-repeat="date in dates" date-slide swiper-slide="tasks/dates/{{date.yyyymmdd}}" expected-slides="dates.length">
