Start week from monday instead of today - not yet done. Previous and next week navigation arrows.

--- a/frontend/core/src/main/webapp/static/app/tasks/datebar.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/datebar.html
@@ -10,6 +10,13 @@
 
 <nav role="navigation" id="datepicker">
   <ul class="horizontally-justified">
+
+    <li class="justified-element datepicker-date">
+      <a href>
+        <span class="icon-arrow-left"></span>
+      </a>
+    </li>
+
     <li class="justified-element datepicker-date">
       <a href>
         <span>{{dates[0].weekday}}</span>
@@ -28,6 +35,12 @@
       <a href>
         <span>{{dates[2].weekday}}</span>
         <span>{{dates[2].date}}</span>
+      </a>
+    </li>
+
+    <li class="justified-element datepicker-date">
+      <a href>
+        <span class="icon-arrow-right"></span>
       </a>
     </li>
     
