Fixed bug with omnibar not always ending up at the top of the screen with iOS, as click event is registered only on the first try for some reason. Focus event is fired every time so switched from ng-click to ng-focus.

--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -42,14 +42,14 @@
             <div class="form-group">
               <div class="left-input-wrapper">
                 <label class="sr-only" for="omniItem">omniItem</label>
-                <input type="search" class="simple-input form-control" id="omniItem" ng-model="omnibarText.title" ng-click="omniBarFocus(true)" placeholder="store / recall" required>
+                <input type="text" ng-focus="omniBarFocus(true)" class="simple-input form-control" id="omniItem" ng-model="omnibarText.title" placeholder="store / recall" required>
               </div>
               <div class="right-button-wrapper">
                 <button id="omnibarPlus" class="button" type="button" ng-click="addNewItem(omnibarText)"><span class="icon-plus"></span>
                 </button>
               </div>
             </div>
-          </form>                
+          </form>
         </div>
         <div ng-if="items.length === 0 && tasks.length === 0">
           <div class="arrow-box">
