--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -17,7 +17,7 @@
           </div>
           <div class="form-group">
             <input class="input-checkbox" type="checkbox" name="checkbox" id="remember" ng-model="user.remember" checked="checked" />
-            <label class="inactive-element" id="remember" for="remember">remember</label>
+            <label class="default-element" id="remember" for="remember">remember</label>
           </div>
           <div class="form-group button-container">
             <button type="submit" id="login-button" class="wide-button normal-button" ng-disabled="!loginForm.$valid" ng-click="userLogin()">
