--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -7,7 +7,7 @@
         </button>
       </li>
       <li class="button-container center-of-three">
-        <button class="enabled-button" type="button" ng-click="itemToTask(item)">
+        <button class="default-button" type="button" ng-click="itemToTask(item)">
           <span class="button-text">task</span>
         </button>
       </li>
