--- a/frontend/core/src/main/webapp/static/app/tasks/listSlide.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/listSlide.html
@@ -4,12 +4,12 @@
     <div ng-if="showListContent">
       <ul class="button-row">
         <li class="button-container left-of-two border-right" ng-hide="mainlinksFilter">
-          <button class="enabled-button" type="button" ng-click="editProject()">
+          <button class="default-button" type="button" ng-click="editProject()">
             more
           </button>
         </li>
         <li class="button-container right-of-two">
-          <button class="enabled-button" type="button" ng-click="archiveList()">
+          <button class="default-button" type="button" ng-click="archiveList()">
             archive
           </button>
         </li>
