--- a/frontend/core/src/main/webapp/static/app/main/itemActions.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemActions.html
@@ -2,7 +2,7 @@
   <div class="item-actions" ng-switch-default>
     <ul class="button-row">
       <li class="button-container left-of-three border-right">
-        <button class="normal-button inactive-button" type="button" ng-disabled="true">
+        <button class="normal-button default-button-disabled" type="button" ng-disabled="true">
           <span class="button-text">note</span>
         </button>
       </li>
