--- a/frontend/core/src/main/webapp/static/app/tasks/datebar.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/datebar.html
@@ -1,45 +1,63 @@
-<!-- <table>
-  <tbody>
-    <tr>
-      <td ng-repeat="date in dates">
-        <a id="datebar" class="text-muted" href ng-click="dateClicked(date.yyyymmdd)">{{date.displayDateShort}}</a>
-      </td>
-    </tr>
-  </tbody>
-</table> -->
-
 <nav role="navigation" id="datepicker">
   <ul class="horizontally-justified">
 
     <li class="justified-element datepicker-date">
-      <a href>
+      <a href ng-click="previousWeek()">
         <span class="icon-arrow-left"></span>
       </a>
     </li>
 
     <li class="justified-element datepicker-date">
-      <a href>
+      <a href ng-click="dateClicked(dates[0].yyyymmdd)">
         <span>{{dates[0].weekday}}</span>
         <span>{{dates[0].date}}</span>
       </a>
     </li>
-    
+
     <li class="justified-element datepicker-date">
-      <a href>
+      <a href ng-click="dateClicked(dates[1].yyyymmdd)">
         <span>{{dates[1].weekday}}</span>
         <span>{{dates[1].date}}</span>
       </a>
     </li>
 
     <li class="justified-element datepicker-date">
-      <a href>
+      <a href ng-click="dateClicked(dates[2].yyyymmdd)">
         <span>{{dates[2].weekday}}</span>
         <span>{{dates[2].date}}</span>
       </a>
     </li>
 
     <li class="justified-element datepicker-date">
-      <a href>
+      <a href ng-click="dateClicked(dates[2].yyyymmdd)">
+        <span>{{dates[3].weekday}}</span>
+        <span>{{dates[3].date}}</span>
+      </a>
+    </li>
+
+    <li class="justified-element datepicker-date">
+      <a href ng-click="dateClicked(dates[2].yyyymmdd)">
+        <span>{{dates[4].weekday}}</span>
+        <span>{{dates[4].date}}</span>
+      </a>
+    </li>
+
+    <li class="justified-element datepicker-date">
+      <a href ng-click="dateClicked(dates[2].yyyymmdd)">
+        <span>{{dates[5].weekday}}</span>
+        <span>{{dates[5].date}}</span>
+      </a>
+    </li>
+
+    <li class="justified-element datepicker-date">
+      <a href ng-click="dateClicked(dates[2].yyyymmdd)">
+        <span>{{dates[6].weekday}}</span>
+        <span>{{dates[6].date}}</span>
+      </a>
+    </li>
+
+    <li class="justified-element datepicker-date">
+      <a href ng-click="nextWeek()">
         <span class="icon-arrow-right"></span>
       </a>
     </li>
