--- a/frontend/core/src/main/webapp/static/app/tasks/subTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/subTask.html
@@ -1,4 +1,4 @@
-<form class="swiper-no-swiping" role="form" name="subtaskToList" ng-submit="add(subtask)">
+<form class="swiper-no-swiping" role="form" name="subtaskToList" ng-submit="addSubtask(subtask)">
   <div class="form-group">
     <label class="sr-only" for="taskTitle">title</label>
     <div>
