--- a/frontend/core/src/main/webapp/static/app/tasks/editTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTask.html
@@ -12,34 +12,12 @@
             <label class="sr-only" for="taskTitle">title</label>
             <input type="text" class="simple-input" id="taskTitle" ng-model="task.title" placeholder="title..." required>
           </div>
-
-          <div ng-switch="showDate">
-
-            <div ng-switch-default>
-              <span class="simple-input default-element" ng-click="focusDate()">select date...</span>
-            </div>
-
-            <div ng-switch-when="true">
-              <div class="form-group">
-                <label for="taskDue" class="sr-only">select date...</label>
-                <input type="date" id="taskDue" class="simple-input" ng-model="task.due" date>
-              </div>
-            </div>
-          </div>
-
           <div class="form-group">
-            <label class="sr-only" for="taskParent">list</label>
-            <select class="simple-input" id="taskParent" ng-model="task.relationships.parent" ng-options="list.uuid as list.title for list in lists">
-              <option value="">select list...</option>
-            </select>
+            <label class="sr-only" for="taskDescription">description</label>
+            <textarea class="simple-input" id="taskDescription" ng-model="task.description" placeholder="description..." expanding-textarea></textarea>
           </div>
 
-          <div ng-if="contexts.length" class="form-group">
-            <label class="sr-only" for="taskContext">context</label>
-            <select class="simple-input" id="taskContext" ng-model="task.relationships.context" ng-options="context.uuid as context.title for context in contexts">
-              <option value="">select context...</option>
-            </select>
-          </div>
+          <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
 
           <div class="form-group">
             <label class="sr-only" for="taskLink">url</label>
