--- a/frontend/core/src/main/webapp/static/app/tasks/lists.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/lists.html
@@ -4,7 +4,37 @@
     <div id="tasks-lists-page-content-container" class="content-container page-content-container">
       <div class="swiper-container vertical-slides" swiper-container="tasks/lists" swiper-type="page">
         <div class="swiper-wrapper">
-          <div class="swiper-slide" ng-repeat="list in lists" list-slide swiper-slide="tasks/lists/{{list.uuid}}" expected-slides="lists.length">
+          <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="tasks/lists/{{list.uuid}}" expected-slides="lists.length" ng-init="subtask = {relationships: {parent: list.uuid}}">
+            <div class="inner-slide-content-container">
+              <section class="list">
+                <h3 ng-click="toggleListContent()">{{list.title}}</h3>
+                <div ng-if="showListContent">
+                  <ul class="button-row">
+                    <li class="button-container left-of-two border-right" ng-hide="mainlinksFilter">
+                      <button class="default-button" type="button" ng-click="editProject()">
+                        more
+                      </button>
+                    </li>
+                    <li class="button-container right-of-two">
+                      <button class="default-button" type="button" ng-click="archiveList()">
+                        archive
+                      </button>
+                    </li>
+                  </ul>
+                </div>
+                <div>
+                  <div class="inner-page-content-container" accordion>
+                    <div ng-repeat="task in tasks | tasksFilter:{name:'byListUUID', filterBy: list.uuid}">
+                      <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+                      <div class="accordion-body" ng-if="isOpen(task)">
+                        <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+                      </div>
+                    </div>
+                    <div ng-include="'static/app/tasks/subTask.html'"></div>
+                  </div>                  
+                </div>
+              </section>
+            </div>
           </div>
         </div>
       </div>
