--- a/frontend/core/src/main/webapp/static/app/tasks/singleTasks.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/singleTasks.html
@@ -3,7 +3,17 @@
     <header id="tasks-lists-header" class="page-header" ng-init="heading='single tasks'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="tasks-single-page-content-container" class="content-container page-content-container">
       <div class="inner-page-content-container">
-        <div tasks-list="tasks" tasks-filter="filterService.activeFilters.unsorted" subtask="subtask"></div>
+        <div>
+          <div class="inner-page-content-container" accordion>
+            <div ng-repeat="task in tasks | tasksFilter:{name:'unsorted'}">
+              <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
+              <div class="accordion-body" ng-if="isOpen(task)">
+                <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
+              </div>
+            </div>
+            <div ng-include="'static/app/tasks/subTask.html'"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
