Get active week's monday. Moved date related stuff from main and tasks controller to new dates controller.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -68,6 +68,7 @@
     <script src="static/app/account/AccountService.js"></script>
 
     <script src="static/app/tasks/TasksController.js"></script>
+    <script src="static/app/tasks/DatesController.js"></script>
     <script src="static/app/tasks/TasksService.js"></script>
     <script src="static/app/tasks/TasksSlidesService.js"></script>
     <script src="static/app/tasks/tasksFilter.js"></script>
