--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -1,5 +1,5 @@
-<section id="tasks-dates" class="two-column-grid page single-lineheight" ng-controller="TasksController">
-  <div class="column">
+<section id="tasks-dates" class="two-column-grid page single-lineheight" ng-controller="DatesController">
+  <div class="column" ng-controller="TasksController">
     <header id="tasks-dates-header" class="page-header" ng-init="heading='dates'" ng-include="'static/app/base/pageHeader.html'"></header>
     <div id="tasks-dates-page-content-container" class="content-container page-content-container">
       <div class="swiper-no-swiping" id="date-picker">
