--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -42,7 +42,7 @@
             <div class="form-group">
               <div class="left-input-wrapper">
                 <label class="sr-only" for="omniItem">omniItem</label>
-                <input type="text" ng-focus="omniBarFocus(true)" class="simple-input form-control" id="omniItem" ng-model="omnibarText.title" placeholder="store / recall" required>
+                <input type="text" ng-focus="omniBarFocus(true)" class="simple-input form-control" id="omniItem" ng-model="omnibarText.title" placeholder="store / recall..." required>
               </div>
               <div class="right-button-wrapper">
                 <button id="omnibarPlus" class="button" type="button" ng-click="addNewItem(omnibarText)"><span class="icon-plus"></span>
