wrong password notification updated

--- a/frontend/core/src/main/webapp/static/app/base/errorMessage.html
+++ b/frontend/core/src/main/webapp/static/app/base/errorMessage.html
@@ -1,11 +1,7 @@
 <div class="alert alert-error error-alert-bar" ng-show="errorMessage">
 
-  <span class="text-danger">
+  <span class="danger">
     {{errorMessage}}
   </span>
-
-  <button class="btn em-plus inline" class="close" aria-hidden="true" ng-click="hideAlert()">
-    &times;
-  </button>
 
 </div>
