Line brake to separate date picker weekdays from dates.

--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -14,49 +14,49 @@
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[0].yyyymmdd)">
-                <span>{{dates[0].weekday}}</span>
+                <span>{{dates[0].weekday}}</span><br>
                 <span>{{dates[0].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[1].yyyymmdd)">
-                <span>{{dates[1].weekday}}</span>
+                <span>{{dates[1].weekday}}</span><br>
                 <span>{{dates[1].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[2].yyyymmdd)">
-                <span>{{dates[2].weekday}}</span>
+                <span>{{dates[2].weekday}}</span><br>
                 <span>{{dates[2].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[3].yyyymmdd)">
-                <span>{{dates[3].weekday}}</span>
+                <span>{{dates[3].weekday}}</span><br>
                 <span>{{dates[3].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[4].yyyymmdd)">
-                <span>{{dates[4].weekday}}</span>
+                <span>{{dates[4].weekday}}</span><br>
                 <span>{{dates[4].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[5].yyyymmdd)">
-                <span>{{dates[5].weekday}}</span>
+                <span>{{dates[5].weekday}}</span><br>
                 <span>{{dates[5].date}}</span>
               </a>
             </li>
 
             <li class="justified-element datepicker-date">
               <a href ng-click="dateClicked(dates[6].yyyymmdd)">
-                <span>{{dates[6].weekday}}</span>
+                <span>{{dates[6].weekday}}</span><br>
                 <span>{{dates[6].date}}</span>
               </a>
             </li>
