--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -52,7 +52,7 @@
           </form>
         </div>
         <div ng-if="items.length === 0 && tasks.length === 0">
-          <div class="arrow-box">
+          <div class="onboarding-bubble">
             type here what you<br>want to remember<br><br>
             we'll take care of the rest
           </div>
