omnibar onboarding bubble color change

--- a/frontend/core/src/main/webapp/static/app/main/home.html
+++ b/frontend/core/src/main/webapp/static/app/main/home.html
@@ -53,8 +53,8 @@
         </div>
         <div ng-if="items.length === 0 && tasks.length === 0">
           <div class="onboarding-bubble">
-            type here what you<br>want to remember<br><br>
-            we'll take care of the rest
+            <span>type here what you<br>want to remember<br><br>
+            we'll take care of the rest</span>
           </div>
         </div>
         <div ng-if="omnibarText.title" id="filtered-items-container">          
