Subtasks array in DatesController - instead of ng-init - to data-bind correct due date into subtask.

--- a/frontend/core/src/main/webapp/static/app/tasks/subTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/subTask.html
@@ -1,8 +1,8 @@
-<form class="swiper-no-swiping" role="form" name="subtaskToList" ng-submit="addSubtask(subtask)">
+<form class="swiper-no-swiping" role="form" name="subtaskToList" ng-submit="addSubtask(subtasks[$index])">
   <div class="form-group">
     <label class="sr-only" for="taskTitle">title</label>
     <div>
-      <input type="text" class="simple-input" id="taskTitle" ng-model="subtask.title" placeholder="add task..."></input>
+      <input type="text" class="simple-input" id="taskTitle" ng-model="subtasks[$index].title" placeholder="add task..."></input>
     </div>
   </div>
 </form>
