Preliminary notes implementation

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -74,6 +74,10 @@
     <script src="static/app/tasks/tasksFilter.js"></script>
     <script src="static/app/tasks/visibleTaskContentFilter.js"></script>
 
+    <script src="static/app/notes/NotesController.js"></script>
+    <script src="static/app/notes/NotesService.js"></script>
+    <script src="static/app/notes/NotesSlidesService.js"></script>
+
     <script src="static/app/main/HomeController.js"></script>
     <script src="static/app/main/ItemsController.js"></script>
     <script src="static/app/main/ItemsService.js"></script>
@@ -91,6 +95,7 @@
     <script src="test/mock/MockAuthBackendService.js"></script>
     <script src="test/mock/MockItemsBackendService.js"></script>
     <script src="test/mock/MockListsBackendService.js"></script>
+    <script src="test/mock/MockNotesBackendService.js"></script>
     <script src="test/mock/MockTagsBackendService.js"></script>
     <script src="test/mock/MockTasksBackendService.js"></script>
     <script>
