--- a/frontend/core/src/main/webapp/static/app/main/footer.html
+++ b/frontend/core/src/main/webapp/static/app/main/footer.html
@@ -19,7 +19,7 @@
     </li>
     
     <li id="notes-link" class="justified-element">
-      <a>
+      <a href ng-click="gotoNotes()" ng-class="getFeatureClasses('notes')">
         <span class="icon-notes"></span>
       </a>
     </li>
