--- a/frontend/core/src/main/webapp/static/app/tasks/singleTasks.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/singleTasks.html
@@ -5,7 +5,7 @@
       <div class="inner-page-content-container">
         <div>
           <div class="inner-page-content-container" accordion>
-            <div ng-repeat="task in tasks | tasksFilter:{name:'unsorted'}">
+            <div ng-repeat="task in tasks | tasksFilter:{name:'unsorted'}" ng-init="subtask = {}">
               <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
               <div class="accordion-body" ng-if="isOpen(task)">
                 <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
